# jlab_datascience_exp_hall

./: README.md
HallD/PunziNet/: punzi_toolkit.yaml  punzi_toolkit_metal.yaml  setup.py
HallD/PunziNet/utests/: utest_pandas_parser.py  (+2 more)
Hall_B/AIDAPT/: README.md  pyproject.toml  registration.py  setup.py
Hall_B/AIDAPT/aidapt_toolkit/: registration.py
Hall_B/AIDAPT/aidapt_toolkit/configs/: basic_driver_config.yaml  hydra_basic_config.yaml  hydra_outer_config.yaml
Hall_B/AIDAPT/aidapt_toolkit/data_parsers/: __init__.py  aidapt_csv_reader_v0.py  aidapt_numpy_reader_v0.py
Hall_B/AIDAPT/aidapt_toolkit/data_prep/: __init__.py  lab_variables_to_invariants.py  numpy_minmax_scaler.py  numpy_standard_scaler.py
Hall_B/AIDAPT/aidapt_toolkit/drivers/: basic_inner_gan_driver.py  graph_driver.py  hydra_driver.py  outer_gan_driver.py
Hall_B/AIDAPT/aidapt_toolkit/models/: __init__.py  tf_cgan_v0.py  tf_mlp_gan_v0.py  tf_mlp_outergan_v0.py  tf_outer_cgan_v0.py
Hall_B/AIDAPT/aidapt_toolkit/utils/: config_utils.py  gradient_monitor.py  graph_driver_utils.py  math_utils.py  registration_utils.py
Hall_B/AIDAPT/configs/: base_graph_config.yaml
Hall_B/AIDAPT/data_parsers/: __init__.py  aidapt_numpy_reader_v0.py  aidapt_parser_v0.py
Hall_B/AIDAPT/data_prep/: __init__.py  lab_variables_to_invariants.py  numpy_minmax_scaler.py
Hall_B/AIDAPT/drivers/: basic_inner_gan_driver.py  graph_driver.py
Hall_B/AIDAPT/models/: __init__.py  tf_mlp_gan_v0.py  tf_mlp_outergan_v0.py
Hall_B/AIDAPT/tests/: test_aidapt_numpy_reader_v0.py
Hall_B/AIDAPT/utils/: config_utils.py
(+22 files in other folders)
